# helium-firmware

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
boards/: Cargo.toml
boards/btt_skr_mini_e3_v3/: Cargo.toml
boards/creality_crc-2405_v1_2/: Cargo.toml
boards/creality_crc-2405_v1_2/src/: lib.rs
boards/skr_mini_e3_v3/: Cargo.toml
boards/skr_mini_e3_v3/src/: lib.rs
boards/src/: lib.rs
src/: main.rs
