[package]
edition = "2021"
name = "helium-firmware"
version = "0.1.0"
authors = ["Ella Fox <ella@fox.gal>"]
resolver = "2"

[features]
default = ["btt-skr_mini_e3_v3"]

btt-skr_mini_e3_v3 = ["hf-btt-skr-mini-e3-v3"]
creality-crc-2405-v1-2 = ["hf-creality-crc-2405-v1-2"]

[dependencies]
hf-boards = { version = "0.1", path = "./boards" }

hf-btt-skr-mini-e3-v3 = { version = "0.1", path = "boards/btt_skr_mini_e3_v3", optional = true }
hf-creality-crc-2405-v1-2 = { version = "0.1", path = "boards/creality_crc-2405_v1_2", optional = true }

embassy-stm32 = { version = "0.1.0", default-features = false }
embassy-sync = { version = "0.5.0", default-features = false }
embassy-executor = { version = "0.5.0", default-features = false }
embassy-time = { version = "0.3.0", default-features = false }
embassy-usb = { version = "0.1.0", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false }

cfg-if = { version = "1.0.0", default-features = false }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
portable-atomic = { version = "1.5", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
